# parallel_diff_evolution

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Parallel_DiffEvolutionSolver  README.md  diff_evolution_solver  report1.qdrep  report10.qdrep  report2.qdrep  report3.qdrep  report4.qdrep  report5.qdrep  report6.qdrep  report7.qdrep  report8.qdrep  report9.qdrep  test_config.yaml
doc/: cart_pole_model.md
include/: utils.cuh
include/cart_pole/: cart_pole_utils.cuh  evaluate.cuh  model.cuh
include/diff_evolution_solver/: converter.cuh  data_type.h  debug.cuh  decoder.cuh  evaluate.cuh  evolve.cuh  random_center.cuh  random_manager.cuh  solver.cuh
include/solver_center/: solver_center.h
include/utils/: utils.cuh  utils_fun.cuh
scripts/cart_pole/: cart_pole.py  utils.py
scripts/cart_pole/Hz_contact_experiment/Hz_contact_noise/: recorded_noise_100s.mat  recorded_noise_1sec.mat  wall_motion_100s.mat  wall_motion_1sec.mat
scripts/cart_pole/pybullet_dynamics/: cart_pole_soft_wall_dynamics_pybullet.py  cartpole.urdf
scripts/cart_pole/saved_noise/: recorded_noise.mat  wall_motion.mat
src/: main.cpp
src/cart_pole/: cart_pole_utils.cu
src/diff_evolution_solver/: random_center.cu  random_manager.cu  solver.cu
src/solver_center/: solver_center.cpp  solver_center.cu
test/: QuadExpr.cpp  README.md  cuda_matrix_multiplication  cuda_matrix_multiplication.cu  cuda_qp_matrix_multiplication  cuda_qp_matrix_multiplication.cu  cuda_sort_test  gurobi_test.cpp  program  test_sort.cu
